Fix task wrapping on mobile devices

--- a/ui/v2.5/src/components/Settings/styles.scss
+++ b/ui/v2.5/src/components/Settings/styles.scss
@@ -129,7 +129,12 @@
     }
 
     .setting {
+      flex-wrap: wrap;
       width: auto;
+
+      & > div:last-child {
+        margin-left: auto;
+      }
     }
   }
 }
